# Vehicle-Manager

./: Cargo.toml  README.md  api-test.ps1
src/: main.rs  vehicle.rs
