[package]
name = "vechicle-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0.145"
tower = { version = "0.5.2", features = ["util"] }
